# Factorio-SAT

./: .gitignore  README.md  belt_balancer.py  belt_balancer_checker.py  belt_balancer_net_free.py  belt_balancer_net_free_power_of_2.py  blueprint.py  blueprint_book.py  calculate_optimal.py  cardinality.py  create_crafter.py  flake.nix  interchange.py  ipasir.py  make_block.py  network.py  optimisations.py  pyproject.toml  render.py  requirements.txt  rotate.py  setup.py  solver.py  solver2.py  solver_test.py  stringifier.py  template.py  test_runner.py  test_suite  tile.py  tilemaps.py  tox.ini  util.py
.github/workflows/: ci.yml
assets/: .gitignore  fetch.py
books/: all.txt  blue_area.txt  blue_narrow.txt  red_area.txt  red_narrow.txt  yellow_area.txt  yellow_narrow.txt
factorio_sat/: belt_balancer.py  belt_balancer_net_free.py  belt_balancer_net_free_power_of_2.py  blueprint.py  blueprint_book.py  calculate_optimal.py  cardinality.py  coord.py  direction.py  interchange.py  ipasir.py  ipasir_up.py  make_block.py  network.py  optimisations.py  render.py  render_2.py  rotate.py  solver.py  stringifier.py  template.py  tile.py  tile_renderer.py  tilemaps.py  trail_logger.py
factorio_sat/assets/: fetch.py
ipasir/: Cargo.toml  pyproject.toml
ipasir/src/: array_2d.rs  coord_2d.rs  direction.rs  lib.rs  sat.rs  tile.rs  tile_assignment.rs  tile_listener.rs
networks/: 10x10  1x2  1x3  1x4  1x5  1x6  1x7  1x8  2x1  2x3  2x4  2x5  2x6  2x7  2x8  3x1  3x2  3x3  3x4  3x5  3x6  3x7  3x8  4x1  4x2  4x3  4x4  4x5  4x6  4x7  4x8  5x1  5x2  5x3  5x4  5x5  5x6  5x7  5x8  6x1  (+23 more)
nix/: cli.nix  factorio-sat.nix  luaparser.nix  overlay.nix  packages.nix
nix/antlr/: default.nix  mk-antlr.nix
test/: grid_test_case.py  test_belt_balancer_net_free_power_of_2.py  test_end_to_end.py  test_sanity.py  test_trail_logger.py
