[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "factorio-sat"
version = "1.0.0"
description = "Enhancing the Factorio experience with SAT solvers"
readme = "README.md"
homepage = "https://github.com/R-O-C-K-E-T/Factorio-SAT"
authors = [
    "Nathan Smithies <nathensmithies@gmail.com>",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
# ipasir @ ./ipasir
ffmpeg-python = "^0.2.0"
numpy = "^1.26.1"
pygame = "^2.5.2"
pyopengl = "^3.1.7"
pillow = "^10.1.0"
python-sat = "^0.1.8.dev10"
graphviz = {version = "^0.20.1", optional = true}
dearpygui = "^1.10.1"
ipasir = { path = "ipasir", develop = true}


[tool.poetry.scripts]
belt_balancer = "factorio_sat.belt_balancer:main"
belt_balancer_net_free = "factorio_sat.belt_balancer_net_free:main"
belt_balancer_net_free_power_of_2 = "factorio_sat.belt_balancer_net_free_power_of_2:main"
blueprint_book = "factorio_sat.blueprint_book:main"
blueprint = "factorio_sat.blueprint:main"
calculate_optimal = "factorio_sat.calculate_optimal:main"
fetch_assets = "factorio_sat.assets.fetch:main"
interchange = "factorio_sat.interchange:main"
make_block = "factorio_sat.make_block:main"
network = "factorio_sat.network:main"
render = "factorio_sat.render:main"
rotate = "factorio_sat.rotate:main"
stringifier = "factorio_sat.stringifier:main"
render_2 = "factorio_sat.render_2:main"

# [tool.setuptools]
# packages = [
#     "factorio_sat",
#     "factorio_sat.assets",
# ]