[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "factorio-sat"
version = "1.0.0"
description = "Enhancing the Factorio experience with SAT solvers"
readme = "README.md"
authors = [
    { name = "Nathan Smithies", email = "nathensmithies@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "python-sat",
    "luaparser",
    "pygame",
    "pillow",
    "PyOpenGL",
    "graphviz",
    "ffmpeg-python",
]

[project.urls]
homepage = "https://github.com/R-O-C-K-E-T/Factorio-SAT"

[project.scripts]
belt_balancer = "factorio_sat.belt_balancer:main"
belt_balancer_net_free = "factorio_sat.belt_balancer_net_free:main"
belt_balancer_net_free_power_of_2 = "factorio_sat.belt_balancer_net_free_power_of_2:main"
blueprint_book = "factorio_sat.blueprint_book:main"
blueprint = "factorio_sat.blueprint:main"
calculate_optimal = "factorio_sat.calculate_optimal:main"
fetch_assets = "factorio_sat.assets.fetch:main"
interchange = "factorio_sat.interchange:main"
make_block = "factorio_sat.make_block:main"
network = "factorio_sat.network:main"
render = "factorio_sat.render:main"
rotate = "factorio_sat.rotate:main"
stringifier = "factorio_sat.stringifier:main"

[tool.setuptools]
packages = [
    "factorio_sat",
    "factorio_sat.assets",
]
