[package]
name = "ipasir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ipasir"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
cadical = { git = "https://github.com/R-O-C-K-E-T/cadical-rs.git" }
arrayvec = "0.7.4"
