[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[tool.poetry]
name = "ipasir"
version = "1.0.0"
description = "IPASIR optional Factorio-Sat extension"
authors = [
    "Nathan Smithies <nathensmithies@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
maturin = ">=1.3,<2.0"

[project]
name = "ipasir"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
